<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.angel.chapter5.MainActivity">

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/bill"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/billAmountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_span="3"
            android:ems="8"
            android:inputType="numberDecimal"
            android:text="@string/amount"
            android:textSize="20sp">

            <requestFocus />
        </EditText>

    </TableRow>

    <!-- The tip percent -->

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Percent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/percentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/tip_percent"
            android:textSize="20sp" />

        <Button
            android:id="@+id/percentDownButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="25dp"
            android:text="@string/decrease"
            android:textSize="20sp" />

        <Button
            android:id="@+id/percentUpButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/increase"
            android:textSize="20sp" />

    </TableRow>

    <!-- the tip amount -->

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tip_amount_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:padding="5dp"
            android:text="@string/tip_amount"
            android:textSize="20sp" />

    </TableRow>

    <!-- the total -->

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/total_amount_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:padding="5dp"
            android:text="@string/total_amount"
            android:textSize="20sp" />

    </TableRow>
</TableLayout>
